--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,41 @@
 ﻿annotated-types==0.7.0
 anyio==4.7.0
-bcrypt
+bcrypt==4.2.1
 beautifulsoup4==4.12.3
-boto3==1.35.86
-botocore==1.35.86
-bs4==0.0.2
+boto==2.49.0
+boto3==1.35.87
+botocore==1.35.87
+click==8.1.7
+colorama==0.4.6
+ecdsa==0.19.0
 fastapi==0.115.6
+greenlet==3.1.1
+h11==0.14.0
+idna==3.10
 jmespath==1.0.1
+jose==1.0.0
+lxml==5.3.0
 passlib==1.7.4
+pdf2image==1.17.0
+pillow==11.0.0
 psycopg2==2.9.10
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
-pydantic==2.10.4
-pydantic_core==2.27.2
+pydantic==2.10.3
+pydantic_core==2.27.1
+PyPDF2==3.0.1
 python-dateutil==2.9.0.post0
+python-docx==1.1.2
 python-dotenv==1.0.1
 python-jose==3.3.0
-python-multipart==0.0.20
+python-multipart==0.0.19
+rsa==4.9
 s3transfer==0.10.4
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.6
 SQLAlchemy==2.0.36
 starlette==0.41.3
 typing_extensions==4.12.2
-urllib3==2.2.3
+urllib3==2.3.0
 uvicorn==0.34.0
-PyJWT
