--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ pillow==11.0.0
 psycopg2==2.9.10
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
-pydantic==2.10.3
+pydantic
 pydantic_core==2.27.1
 PyPDF2==3.0.1
 python-dateutil==2.9.0.post0
